syntax = "proto3";
option java_multiple_files = true;
option java_package = "com.rachvik.games.cards.rummy.services";

import "games/cards/common/models/models.proto";
import "games/cards/rummy/models/models.proto";

message RummyCreateGameRequest {
  RummyGameConfig config = 1;
}

message RummyMoveRequest {
  RummyMove move = 1;
}

message RummyStartGameRequest {
  string game_id = 1;
}

message RummyJoinGameRequest {
  Player player = 1;
  string game_id = 2;
}

message RummyGameResponse {
  RummyGame game = 1;
}

service RummyService {
  rpc createGame(RummyCreateGameRequest) returns (RummyGameResponse) {};
  rpc joinGame(RummyJoinGameRequest) returns (RummyGameResponse) {};
  rpc startCame(RummyStartGameRequest) returns (RummyGameResponse) {};
  rpc recordMove(RummyMoveRequest) returns (RummyGameResponse) {};
}

